Fix centering and spacing

--- a/knuthesis.sty
+++ b/knuthesis.sty
@@ -64,7 +64,7 @@
 		% 12pt 바탕, 굵게
 		{\fontsize{12pt}{1pt}\selectfont \textbf{\@major\\The Graduate School}}\\
 		% space at least 2cm
-		\vspace{1cm}
+		\vspace{2cm}
 		% 14pt 바탕, 성과 이름은 띄어쓰고 이름의 각 음절은 붙여 씀
 		% 예) Hong Gildong 또는 Hong Gil-dong
 		{\fontsize{14pt}{1pt}\selectfont \textbf{\@author}}\\
@@ -73,7 +73,7 @@
 		% 12pt 바탕, 굵게, 1학기 June, 2학기 December
 		{\fontsize{12pt}{1pt}\selectfont \noindent \textbf{\@degreedate}}\\
 		% space at least 1cm
-		\vspace{\fill}
+		\vspace{1cm}
 		% 16 pt 맑은 고딕, 굵게
 		{\fontspec{Malgun Gothic}\fontsize{16pt}{1pt}\selectfont \textbf{The Graduate School\\Kyungpook National University}}\\
 		% space at least 2cm
@@ -85,7 +85,7 @@
 
 \newcommand{\makeapproval}{
 	\thispagestyle{empty}
-	\newgeometry{top=2.5cm,bottom=1.5cm}
+	\newgeometry{left=2cm,top=2.5cm,right=2cm,bottom=1.5cm}
 	\setstretch{1.3}
 	\begin{center}
 		% space at least 3cm
